--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -36,7 +36,7 @@
       <div class="post_content_area">
         <div class="post_content_left">
             <img src="<%= "/post_images/#{@post.image_name}" %>">
-            <% if @post.user.id == @current_user.id || @user.admin = true %>
+            <% if @post.user.id == @current_user.id || @user.admin == true %>
               <%= link_to("編集","/posts/#{@post.id}/edit") %>
               <%= link_to("削除","/posts/#{@post.id}/destroy",{method: "post"}) %>
             <% end %>
