--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -44,6 +44,9 @@
               <div class="user-edit-btn">
                 <%= link_to("アカウント編集","/users/#{@user.id}/edit") %><br>
               </div>
+              <div class="user-destroy-btn">
+                <%= link_to("アカウント削除","/users/#{@user.id}/destroy",{method: "post"}) %>
+              </div>
             <% end %>
         </div>
         <div class="user_name">
