--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -220,6 +220,98 @@
     opacity: 0.6;
   }
 
+  @media (max-width: 1000px) {
+    .top_main_container {
+      width: 100%;
+      height: auto;
+      margin: 0 auto;
+    }
+
+    .top_main_container img {
+      width: 100%;
+    }
+    
+    .top_main_wrapper {
+      width: 100%;
+      height: auto;
+      padding: 0 16px;
+      margin: auto;
+      box-sizing: border-box;
+    }
+
+    .about_main_text {
+      width: 100%;
+      height: auto;
+      padding: 20px 0;
+      color: #354e59;
+    }
+    
+    .about_main_text h2 {
+      font-size: 50px;
+      font-weight: 400;
+      line-height: 1.4;
+      padding: 30px 0 10px 0;
+    }
+
+    .about_main_text p {
+      font-size: 30px;
+      font-weight: 400;
+    }
+
+    .about_image {
+      width: 100%;
+    }
+
+    .about-image ul {
+      text-align: center;
+      display: inline-block;
+    }
+
+    .about_image img {
+      height: 300px;
+    }
+    
+    .about_image li {
+      width: 100%;
+      list-style: none;
+      display: inline-block;
+      vertical-align: top;
+    }
+
+    .about_text {
+      width: 100%;
+      height: 200px;
+      text-align: center;
+      color: #738e99;
+      background-color: #e6dcd8;
+      margin-top: 30px;
+    }
+
+    .about_text h3 {
+      font-size: 30px;
+      font-weight: 400;
+      line-height: 1.4;
+      padding: 30px 0 10px 0;
+    }
+
+    .about_text p {
+      font-size: 20px;
+      font-weight: 400;
+    }
+
+    .about_login a {
+      font-size: 20px;
+      font-weight: 400;
+      margin: 20px 0;
+      color: #354e59;
+    }
+
+    .about_login :hover {
+      opacity: 0.6;
+    }
+
+  }
+
   #-------------------------------------------------
 
   .more-top {
