--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -40,14 +40,14 @@
       <div class="user_content_left">
         <div class="user-image">
           <img src="<%= "/user_images/#{@user.image_name}" %>">
-            <% if @user.id == @current_user.id %>
+            <% if @user.id == @current_user.id || @user.admin = true %>
               <div class="user-edit-btn">
-                <%= link_to("アカウント編集","/users/#{@user.id}/edit") %><br>
+                <%= link_to("アカウント編集","/users/#{@user.id}/edit") %>
               </div>
               <div class="user-destroy-btn">
                 <%= link_to("アカウント削除","/users/#{@user.id}/destroy",{method: "post"}) %>
               </div>
-            <% end %>
+            <%  end %>
         </div>
         <div class="user_name">
           <p>ユーザーネーム</p>
